--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,5 @@
-<md-toolbar color="primary">
+<mat-toolbar color="primary">
   <h1>My Coffee app</h1>
-</md-toolbar>
+</mat-toolbar>
+
+<router-outlet></router-outlet>
